Project Finished as of now. I may extend this project in the future.

--- a/notebooks/Digital_Clock.ipynb
+++ b/notebooks/Digital_Clock.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "95816c22",
+   "execution_count": null,
+   "id": "84d3bfad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,14 @@
     "#Let's add a function that will retrieve the time for us.\n",
     "def get_time():\n",
     "    timeVar = time.strftime(\"%I:%M:%S %p\")\n",
-    "    #%I:Hours,%M: Minutes,%S:Seconds,%p:AM or PM\n",
+    "    #%I:Hours,%M: Minutes,%S:Seconds,%p:AM or PM,%Z: Time Zone,%H: Hour (24 Hour format)\n",
     "    clock.config(text = timeVar)\n",
     "    #Use clock after method to update run this function ever .002 sec\n",
     "    clock.after(200,get_time)\n",
     "\n",
     "#Let's give the clock a label with font,text size, background color, and foreground color.\n",
-    "clock = Label(master, font = (\"Gentium Book\",90), bg = \"black\", fg = \"aqua\")\n",
+    "#We can do the same for the label by using Label(master, font = \"\", bg = \"\", fg = \"\").pack()\n",
+    "clock = Label(master, font = (\"Gentium Book\", 100), bg = \"black\", fg = \"aqua\")\n",
     "#Use pack to place the label center screen.\n",
     "clock.pack()\n",
     "\n",
@@ -33,14 +34,6 @@
     "#We'll need to put this code in a loop so that the clock keep running.\n",
     "master.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d49eb8d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
